wier/force-app/main/default/objects/Form__c/fields/Accurate_engineering_drawings_score__c.field-meta.xml
<CustomField>
    <fullName>Accurate_engineering_drawings_score__c</fullName>
    <formula>CASE(TEXT(  Provides_accurate_engineering_drawings__c  ), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accurate engineering drawings score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>