wier/force-app/main/default/objects/Form__c/fields/Communicates_clear_project_plan_score__c.field-meta.xml
<CustomField>
    <fullName>Communicates_clear_project_plan_score__c</fullName>
    <formula>CASE(TEXT(  Weir_communicates_a_clear_project_plan__c ), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Communicates clear project plan score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>