wier/force-app/main/default/objects/Form__c/fields/Communicates_clear_project_plan_specify__c.field-meta.xml
<CustomField>
    <fullName>Communicates_clear_project_plan_specify__c</fullName>
    <label>Communicates clear project plan specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>