wier/force-app/main/default/objects/Form__c/fields/Delivery_completed_on_time_score__c.field-meta.xml
<CustomField>
    <fullName>Delivery_completed_on_time_score__c</fullName>
    <formula>CASE(TEXT(Delivery_installation_completed_on_time__c), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery completed on time score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>