wier/force-app/main/default/objects/Form__c/fields/Delivery_completed_on_time_specify__c.field-meta.xml
<CustomField>
    <fullName>Delivery_completed_on_time_specify__c</fullName>
    <label>Delivery completed on time specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>