wier/force-app/main/default/objects/Form__c/fields/Delivery_installation_completed_on_time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_installation_completed_on_time__c</fullName>
    <label>Delivery/installation completed on time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>