wier/force-app/main/default/objects/Form__c/fields/Delivery_met_expectations_score__c.field-meta.xml
<CustomField>
    <fullName>Delivery_met_expectations_score__c</fullName>
    <formula>CASE(TEXT( Delivery_install_met_expectations__c), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery met expectations score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>