wier/force-app/main/default/objects/Form__c/fields/Delivery_met_expectations_specify__c.field-meta.xml
<CustomField>
    <fullName>Delivery_met_expectations_specify__c</fullName>
    <label>Delivery met expectations specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>