wier/force-app/main/default/objects/Form__c/fields/Detractors__c.field-meta.xml
<CustomField>
    <fullName>Detractors__c</fullName>
    <label>Detractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>