wier/force-app/main/default/objects/Form__c/fields/Fulfillment_process_is_easy_specify__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_process_is_easy_specify__c</fullName>
    <label>Fulfillment process is easy specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>