wier/force-app/main/default/objects/Form__c/fields/I_consider_Weir_a_solutions_provider__c.field-meta.xml
<CustomField>
    <fullName>I_consider_Weir_a_solutions_provider__c</fullName>
    <label>I consider Weir a solutions provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I’m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>