wier/force-app/main/default/objects/Form__c/fields/I_will_use_Weir_for_future_projects__c.field-meta.xml
<CustomField>
    <fullName>I_will_use_Weir_for_future_projects__c</fullName>
    <label>I will use Weir for future projects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I’m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>