wier/force-app/main/default/objects/Form__c/fields/installation_team_performed_safely__c.field-meta.xml
<CustomField>
    <fullName>installation_team_performed_safely__c</fullName>
    <label>installation team performed safely</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>