wier/force-app/main/default/objects/Form__c/fields/installation_team_performed_safely_score__c.field-meta.xml
<CustomField>
    <fullName>installation_team_performed_safely_score__c</fullName>
    <formula>CASE(TEXT( installation_team_performed_safely__c ), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>installation team performed safely score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>