wier/force-app/main/default/objects/Form__c/fields/Invoices_from_Weir_are_accurate__c.field-meta.xml
<CustomField>
    <fullName>Invoices_from_Weir_are_accurate__c</fullName>
    <label>Invoices from Weir are accurate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>