wier/force-app/main/default/objects/Form__c/fields/Invoices_from_Weir_are_accurate_score__c.field-meta.xml
<CustomField>
    <fullName>Invoices_from_Weir_are_accurate_score__c</fullName>
    <formula>CASE(TEXT( Invoices_from_Weir_are_accurate__c ), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoices from Weir are accurate score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>