wier/force-app/main/default/objects/Form__c/fields/Invoices_from_Weir_are_accurate_specify__c.field-meta.xml
<CustomField>
    <fullName>Invoices_from_Weir_are_accurate_specify__c</fullName>
    <label>Invoices from Weir are accurate specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>