wier/force-app/main/default/objects/Form__c/fields/Learn_about_new_technologies__c.field-meta.xml
<CustomField>
    <fullName>Learn_about_new_technologies__c</fullName>
    <label>Learn about new technologies</label>
    <type>TextArea</type>
</CustomField>