wier/force-app/main/default/objects/Form__c/fields/Learn_about_new_technologies_specify__c.field-meta.xml
<CustomField>
    <fullName>Learn_about_new_technologies_specify__c</fullName>
    <label>Learn about new technologies specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>