wier/force-app/main/default/objects/Form__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <formula>((Passives__c + Promoters__c + Detractors__c)-(Detractors__c))/(Passives__c + Promoters__c + Detractors__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>