wier/force-app/main/default/objects/Form__c/fields/Order_fulfillment_process_is_easy_score__c.field-meta.xml
<CustomField>
    <fullName>Order_fulfillment_process_is_easy_score__c</fullName>
    <formula>CASE(TEXT(  Order_fulfillment_process_is_easy__c ), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order fulfillment process is easy score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>