wier/force-app/main/default/objects/Form__c/fields/Overall_Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience_Score__c</fullName>
    <formula>CASE(TEXT( Rate_your_overall_experience_with_Weir__c ), 
&apos;Very Satisfied&apos;,100, 
&apos;Satisfied&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Somewhat Dissatisfied&apos;,-100, 
&apos;Very Dissatisfied&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Experience Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>