wier/force-app/main/default/objects/Form__c/fields/Passives__c.field-meta.xml
<CustomField>
    <fullName>Passives__c</fullName>
    <label>Passives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>