wier/force-app/main/default/objects/Form__c/fields/Portfolio_aligns_with_my_company_s_needs__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_aligns_with_my_company_s_needs__c</fullName>
    <label>Portfolio aligns with my company’s needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>