wier/force-app/main/default/objects/Form__c/fields/Portfolio_aligns_with_my_needs_score__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_aligns_with_my_needs_score__c</fullName>
    <formula>CASE(TEXT(  Portfolio_aligns_with_my_company_s_needs__c ), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio aligns with my needs score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>