wier/force-app/main/default/objects/Form__c/fields/Portfolio_aligns_with_my_needs_specify__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_aligns_with_my_needs_specify__c</fullName>
    <label>Portfolio aligns with my needs specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>