wier/force-app/main/default/objects/Form__c/fields/Products_met_expectation_specify__c.field-meta.xml
<CustomField>
    <fullName>Products_met_expectation_specify__c</fullName>
    <label>Products met expectation specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>