wier/force-app/main/default/objects/Form__c/fields/Products_met_my_expectations_score__c.field-meta.xml
<CustomField>
    <fullName>Products_met_my_expectations_score__c</fullName>
    <formula>CASE(TEXT(  products_purchased_met_my_expectations__c ), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products met my expectations score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>