wier/force-app/main/default/objects/Form__c/fields/products_purchased_met_my_expectations__c.field-meta.xml
<CustomField>
    <fullName>products_purchased_met_my_expectations__c</fullName>
    <label>products purchased met my expectations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>