wier/force-app/main/default/objects/Form__c/fields/Provided_accurate_documentation_specify__c.field-meta.xml
<CustomField>
    <fullName>Provided_accurate_documentation_specify__c</fullName>
    <label>Provided accurate documentation specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>