wier/force-app/main/default/objects/Form__c/fields/Provides_accurate_engineering_drawings__c.field-meta.xml
<CustomField>
    <fullName>Provides_accurate_engineering_drawings__c</fullName>
    <label>Provides accurate engineering drawings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>