wier/force-app/main/default/objects/Form__c/fields/Provides_accurate_quotes_and_RFQ_s_score__c.field-meta.xml
<CustomField>
    <fullName>Provides_accurate_quotes_and_RFQ_s_score__c</fullName>
    <formula>CASE(TEXT(  Provides_accurate_quotes_and_RFQ_s__c ), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provides accurate quotes and RFQ’s score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>