wier/force-app/main/default/objects/Form__c/fields/Provides_accurate_quotes_RFQ_s_Specify__c.field-meta.xml
<CustomField>
    <fullName>Provides_accurate_quotes_RFQ_s_Specify__c</fullName>
    <label>Provides accurate quotes &amp; RFQ’s Specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>