wier/force-app/main/default/objects/Form__c/fields/Provides_responsive_support_specify__c.field-meta.xml
<CustomField>
    <fullName>Provides_responsive_support_specify__c</fullName>
    <label>Provides responsive support specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>