wier/force-app/main/default/objects/Form__c/fields/provides_timely_quotes_and_RFQ_s__c.field-meta.xml
<CustomField>
    <fullName>provides_timely_quotes_and_RFQ_s__c</fullName>
    <label>Provides timely quotes and RFQ’s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>