wier/force-app/main/default/objects/Form__c/fields/Provides_timely_quotes_and_RFQ_s_specify__c.field-meta.xml
<CustomField>
    <fullName>Provides_timely_quotes_and_RFQ_s_specify__c</fullName>
    <label>Provides timely quotes and RFQ’s specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>