wier/force-app/main/default/objects/Form__c/fields/Quality_of_product_as_designed_score__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_product_as_designed_score__c</fullName>
    <formula>CASE(TEXT(  Rate_the_quality_of_product_as_designed__c  ), 
&apos;Very Good&apos;,100, 
&apos;Good&apos;,100, 
&apos;Acceptable&apos;,0, 
&apos;Poor&apos;,-100, 
&apos;Very Poor&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality of product as designed score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>