wier/force-app/main/default/objects/Form__c/fields/Rate_product_as_designed_specify__c.field-meta.xml
<CustomField>
    <fullName>Rate_product_as_designed_specify__c</fullName>
    <label>Rate product as designed specify</label>
    <type>TextArea</type>
</CustomField>