wier/force-app/main/default/objects/Form__c/fields/Rate_quality_of_product_as_used_specify__c.field-meta.xml
<CustomField>
    <fullName>Rate_quality_of_product_as_used_specify__c</fullName>
    <label>Rate quality of product as used specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>