wier/force-app/main/default/objects/Form__c/fields/Rate_the_quality_of_product_as_designed__c.field-meta.xml
<CustomField>
    <fullName>Rate_the_quality_of_product_as_designed__c</fullName>
    <label>Rate the quality of product as designed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Very poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>