wier/force-app/main/default/objects/Form__c/fields/Rate_your_overall_experience_specify__c.field-meta.xml
<CustomField>
    <fullName>Rate_your_overall_experience_specify__c</fullName>
    <label>Rate your overall experience specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>