wier/force-app/main/default/objects/Form__c/fields/Rate_your_overall_experience_with_Weir__c.field-meta.xml
<CustomField>
    <fullName>Rate_your_overall_experience_with_Weir__c</fullName>
    <label>Rate your overall experience with Weir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>