wier/force-app/main/default/objects/Form__c/fields/Recommend_Weir_score__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Weir_score__c</fullName>
    <formula>CASE(TEXT(  Recommend_Weir_to_peers_colleagues__c ), 
&apos;Very likely&apos;,100, 
&apos;Somewhat likely&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Somewhat unlikely&apos;,-100, 
&apos;Very unlikely&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommend Weir score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>