wier/force-app/main/default/objects/Form__c/fields/Recommend_Weir_to_my_peers_specify__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Weir_to_my_peers_specify__c</fullName>
    <label>Recommend Weir to my peers specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>