wier/force-app/main/default/objects/Form__c/fields/Recommend_Weir_to_peers_colleagues__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Weir_to_peers_colleagues__c</fullName>
    <label>Recommend Weir to peers/colleagues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very likely</fullName>
            </value>
            <value>
                <fullName>Somewhat likely</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat unlikely</fullName>
            </value>
            <value>
                <fullName>Very unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>