wier/force-app/main/default/objects/Form__c/fields/Satisfied_with_audit_conducted_specify__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_with_audit_conducted_specify__c</fullName>
    <label>Satisfied with audit conducted specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>