wier/force-app/main/default/objects/Form__c/fields/Satisfied_with_the_audit_conducted__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_with_the_audit_conducted__c</fullName>
    <label>Satisfied with the audit conducted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>