wier/force-app/main/default/objects/Form__c/fields/Satisfied_with_the_audit_conducted_score__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_with_the_audit_conducted_score__c</fullName>
    <formula>CASE(TEXT(  Satisfied_with_the_audit_conducted__c  ), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Satisfied with the audit conducted score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>