wier/force-app/main/default/objects/Form__c/fields/Suggestions_for_improvement__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_for_improvement__c</fullName>
    <label>Suggestions for improvement</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>