wier/force-app/main/default/objects/Form__c/fields/Team_performed_safely_specify__c.field-meta.xml
<CustomField>
    <fullName>Team_performed_safely_specify__c</fullName>
    <label>Team performed safely specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>